--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>nexter &mdash; your home, your freedom</title>
+    <title>Nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
     <div class="sidebar">
@@ -423,7 +423,7 @@
         </li>
       </ul>
       <p class="copyright">
-        &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this
+        &copy; Copyright 2023 by Shahbozbek. Feel free to use this
         project for your own purposes. This does NOT apply if you plan to
         produce your own course or tutorials based on this project.
       </p>
